# Product-Creation-Agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TESTING.md  config.py  conftest.py  google_image_scraper.py  main.py  pyproject.toml  requirements.txt  setup.py  shopify_products.py
.github/workflows/: deploy.yml  deploy_docker.yml  deploy_gui.yml  run_test.yml
agent/: agent.py  agent_definitions.py  agent_test.py  agent_updated.py  llm_client.py  llm_client_test.py  nodes.py  prompts.py  schema.py  services.py  tools.py  tools_test.py
agents/agent/: agent.py  agent_definition_test.py  agent_definitions.py  agent_test.py  llm.py  llm_mock.py  llm_test.py  prompts.py  schema.py  services.py  tools.py  tools_test.py
agents/definitions/: __init__.py  synthesis.py
agents/infrastructure/firecrawl_api/: client.py  client_test.py  exceptions.py  mock.py  pydantic_test.py  schema.py
agents/infrastructure/shopify_api/: client.py  client_test.py  exceptions.py  mock.py  product_schema.py  product_schema_test.py  schema.py
agents/infrastructure/vector_database/: db.py  db_mock.py  db_test.py  embeddings.py  embeddings_mock.py  embeddings_test.py  schema.py
api/: dependencies_into_api.md  main.py  shared.py  test_main.py
api/dependencies/: product_generation_dependencies.py
api/internal/: consume_task.py
api/models/: product_generation.py  request_schema.py
api/routers/: product_generate.py
db/: __init__.py  client.py  client_test.py
factory/: __init__.py  agents.py  container.py
firecrawl_api/: client.py  client_test.py
gui/: HOT_RELOAD.md  QUICKSTART.md  main.py  models.py  requirements.txt  run_hot.sh  setup.py  upload_to_dropbox.py
models/: product_generation.py
models/product_generate/: query_extract.py
scripts/: manual_vector_fill.py
services/: misc.py  product_create_service.py  product_create_service_test.py  schema.py
services/internal/: embeddor.py  scraper.py  shop.py  vector_db.py  vector_db_test.py
shopify_api/: client.py  client_test.py  product_schema.py
src/product_agent/: __init__.py  __main__.py  logging.py
src/product_agent/api/: app.py  consumers.py
src/product_agent/config/: __init__.py  agents.py  container.py
src/product_agent/core/: exceptions.py  workflow.py
src/product_agent/db/: redis.py
src/product_agent/models/: image_classification.py  image_transformer.py  llm_input.py  query.py  relevance.py  scraper.py  (+2 more)
store_data/embedding_examples/: singe_document_embed.json
tests/: conftest.py
tests/mocks/: __init__.py  firecrawl_mock.py  image_scraper_mock.py  llm_mock.py  shopify_mock.py  synthesis_mock.py  vector_db_mock.py
tools/: vector_db_search.py
vector_database/: db.py  db_test.py  embeddings_test.py
(+88 files in other folders)
