[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-agent"
version = "1.0.0"
description = "AI-powered multi-tenant product generation agent with Shopify integration"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "agent", "shopify", "product-generation", "langchain", "langgraph"]

dependencies = [
    "cryptography>=46.0.0",
    "fastapi>=0.128.0",
    "firecrawl-py>=4.9.0",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "pydantic>=2.12.0",
    "pyOpenSSL>=25.3.0",
    "python-dotenv>=1.2.0",
    "qdrant-client>=1.16.0",
    "redis>=7.1.0",
    "shopifyapi>=12.7.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
product-agent = "product_agent.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["product_agent*"]

[tool.setuptools.package-data]
"product_agent.gui" = ["images/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["shopify.*", "firecrawl.*", "langchain.*", "langgraph.*", "qdrant_client.*"]
ignore_missing_imports = true
